# open62541

src/server/: ua_services_attribute.c
tests/: CMakeLists.txt
tests/server/: check_local_monitored_item.c
tools/nodeset_compiler/: backend_open62541.py
